[package]
name = "hfw-save-converter"
version = "0.1.0"
description = "A cross-platform application to convert Horizon Forbidden West's PS4 saves to PC"
authors = ["Krzysztof Saczuk <me@krzysztofsaczuk.pl>"]
edition = "2021"
repository = "https://github.com/zakuciael/hfw-save-converter"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["save", "save-converter", "ps4-to-pc", "hfw"]
categories = ["parser-implementations", "command-line-utilities"]

[[bin]]
name = "hfw-save-converter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
educe = { version = "0.5.11", default-features = false, features = ["Debug"] }
figment = { version = "0.10.15", features = ["env"] }
image = { version = "0.25.0", default-features = false, features = ["png"] }
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
tiny-gradient = "0.1.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
